set up basic routing and forms

--- a/Pierre/Views/Home/Index.cshtml
+++ b/Pierre/Views/Home/Index.cshtml
@@ -3,3 +3,13 @@
 }
 
 <h1>Pierre's Bakery</h1>
+
+<a href="/">
+  <h2>Home</h2>
+</a>
+<a href="/vendors">
+  <h2>Vendors List</h2>
+</a>
+<a href="/vendors/new">
+  <h2>New Vendor Form</h2>
+</a>
