add dynamic order form, fix controller bug

--- a/Pierre/Views/Orders/New.cshtml
+++ b/Pierre/Views/Orders/New.cshtml
@@ -3,16 +3,43 @@
 }
 
 <form action="/vendors/@Model.Id/orders" method="post">
-  <h3>Add @Model.Name Order</h3>
+  <h3>New @Model.Name Order</h3>
   <input id="vendorId" name="vendorId" type="hidden" value="@Model.Id">
+
   <label for="orderName">Name</label>
   <input id="orderName" name="orderName" type="text">
+
   <label for="orderDates">Date(s)</label>
   <input id="orderDates" name="orderDates" type="text">
+
   <label for="orderPrice">Price</label>
   <input id="orderPrice" name="orderPrice" type="number">
+
   <input type="checkbox" id="orderHasPaid" name="orderHasPaid">
   <label for="orderHasPaid">Payment Received</label><br>
+
+  <div id="detailsContainer">
+    <label>Items</label>
+    <div class="detailEntry">
+      <input name="detailQuantities" type="number" placeholder="Quantity">
+      <input name="detailItems" type="text" placeholder="Item">
+    </div>
+  </div>
+
+  <button type="button" onclick="addDetailField()">Add Detail</button>
+  <br>
   <br>
   <button type="submit">Add order</button>
+
+  <script>
+    function addDetailField() {
+      const container = document.getElementById('detailsContainer');
+      const newEntry = document.createElement('div');
+      newEntry.innerHTML = `
+                <input name="detailQuantities" type="number" placeholder="Quantity">
+                <input name="detailItems" type="text" placeholder="Item">
+            `;
+      container.appendChild(newEntry);
+    }
+  </script>
 </form>
