--- a/Pierre/wwwroot/css/styles.css
+++ b/Pierre/wwwroot/css/styles.css
@@ -13,6 +13,32 @@
 .bread {
   width: 10vw;
 }
+
 body {
-  background-color: #30b0d0;
+  background: rgb(233, 233, 233);
+  background: linear-gradient(90deg, rgba(233, 233, 233, 1) 0%, rgba(68, 188, 219, 1) 7%, rgba(68, 188, 219, 1) 93%, rgba(233, 233, 233, 1) 100%);
+}
+
+#vendorForm {
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+#vendorForm h2 {
+  font-size: 32px;
+}
+
+#vendorForm input {
+  margin-bottom: 3px;
+}
+
+#vendorForm button {
+  margin-bottom: 3px;
+}
+
+a {
+  color: black;
+  text-decoration: none;
 }
