add further styling, unpaid red feature

--- a/Pierre/Views/Home/Index.cshtml
+++ b/Pierre/Views/Home/Index.cshtml
@@ -2,8 +2,7 @@
   Layout = "_Layout";
 }
 
-<h1>Pierre's Bakery</h1>
+<h3>Welcome, Pierre!</h3>
 
-<a href="/vendors">
-  <h2>Vendors List</h2>
-</a>
+<p>To view a list of vendors, click the checklist icon in the upper right corner. To return to this home page, click the bread icon in the upper left corner.</p>
+
