--- a/Pierre/wwwroot/css/styles.css
+++ b/Pierre/wwwroot/css/styles.css
@@ -11,7 +11,8 @@
 }
 
 .bread {
-  width: 10vw;
+  width: 13vw;
+  height: 10vw;
 }
 
 body {
@@ -36,9 +37,78 @@ body {
 
 #vendorForm button {
   margin-bottom: 3px;
+  background-color: #FBE304;
 }
 
 a {
   color: black;
   text-decoration: none;
+}
+
+#vendorsList {
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+#vendorsList button {
+  background-color: #FBE304;
+}
+
+#vendorsList h3 {
+  font-size: 20px;
+}
+
+#vendorsList h3 :hover {
+  color: #FBE304;
+}
+
+#vendorsList h2 {
+  text-decoration: underline;
+  font-size: 32px;
+}
+
+#vendorsList h4 {
+  font-size: 17px;
+  font-weight: 400;
+  margin-bottom: 4px;
+}
+
+svg {
+  width: 10vw;
+  height: 10vw;
+}
+
+#ordersList {
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#deliverTo {
+  font-style: italic;
+  text-align: center;
+}
+
+#ordersList h3 {
+  text-align: center;
+  font-size: 32px;
+}
+
+.orderCard {
+  background-color: #FBE304;
+  padding: 10px;
+  width: 85vw;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 5px;
+}
+
+.orderCard h2 {
+  text-decoration: underline;
+}
+
+#false {
+  color: red;
 }
