--- a/Pierre/wwwroot/css/styles.css
+++ b/Pierre/wwwroot/css/styles.css
@@ -54,6 +54,7 @@ a {
 
 #vendorsList button {
   background-color: #FBE304;
+  margin-top: 20px;
 }
 
 #vendorsList h3 {
@@ -67,6 +68,7 @@ a {
 #vendorsList h2 {
   text-decoration: underline;
   font-size: 32px;
+  margin-bottom: 20px;
 }
 
 #vendorsList h4 {
@@ -96,13 +98,27 @@ svg {
   font-size: 32px;
 }
 
-.orderCard {
-  background-color: #FBE304;
-  padding: 10px;
-  width: 85vw;
+#ordersList button {
+  display: block;
+  width: fit-content;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 5px;
+  background-color: #FBE304;
+}
+
+.orderCard {
+  background-color: rgb(254, 242, 127);
+  padding: 10px 10px 10px 2vw;
+  width: 85vw;
+  max-width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+  border-style: groove;
+  border-width: 5px;
+  border-color: #e9e9e9;
+  box-shadow: 3px 3px 3px #e9e9e9;
 }
 
 .orderCard h2 {
@@ -111,4 +127,36 @@ svg {
 
 #false {
   color: red;
+}
+
+#orderForm {
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+#orderForm h3 {
+  font-size: 32px;
+}
+
+.quantity {
+  width: 84px;
+}
+
+.item {
+  width: 230px;
+}
+
+#orderForm input {
+  margin-bottom: 3px;
+}
+
+hr {
+  color: #FBE304;
+}
+
+#orderForm button {
+  background-color: #FBE304;
+  margin-bottom: 20px;
 }
