--- a/Pierre/wwwroot/css/styles.css
+++ b/Pierre/wwwroot/css/styles.css
@@ -18,6 +18,8 @@
 body {
   background: rgb(233, 233, 233);
   background: linear-gradient(90deg, rgba(233, 233, 233, 1) 0%, rgba(68, 188, 219, 1) 7%, rgba(68, 188, 219, 1) 93%, rgba(233, 233, 233, 1) 100%);
+  font-family: bakery;
+  font-weight: bolder;
 }
 
 #vendorForm {
@@ -28,7 +30,7 @@ body {
 }
 
 #vendorForm h2 {
-  font-size: 32px;
+  font-size: 40px;
 }
 
 #vendorForm input {
@@ -66,8 +68,7 @@ a {
 }
 
 #vendorsList h2 {
-  text-decoration: underline;
-  font-size: 32px;
+  font-size: 40px;
   margin-bottom: 20px;
 }
 
@@ -95,7 +96,7 @@ svg {
 
 #ordersList h3 {
   text-align: center;
-  font-size: 32px;
+  font-size: 40px;
 }
 
 #ordersList button {
@@ -121,10 +122,6 @@ svg {
   box-shadow: 3px 3px 3px #e9e9e9;
 }
 
-.orderCard h2 {
-  text-decoration: underline;
-}
-
 #false {
   color: red;
 }
@@ -137,7 +134,7 @@ svg {
 }
 
 #orderForm h3 {
-  font-size: 32px;
+  font-size: 40px;
 }
 
 .quantity {
@@ -165,6 +162,7 @@ hr {
   text-align: center;
   font-style: italic;
   margin-bottom: 20px;
+  font-size: 40px;
 }
 
 #homePage {
@@ -173,5 +171,10 @@ hr {
   max-width: 450px;
   margin-left: auto;
   margin-right: auto;
+  font-size: 17px;
 }
 
+@font-face {
+  font-family: bakery;
+  src: url("../fonts/frenchy/frenchy.ttf");
+}
