add strong tags for h elements

--- a/Pierre/Views/Home/Index.cshtml
+++ b/Pierre/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div id="homePage">
-  <h3 id="bienvenue">Bienvenue Pierre !</h3>
+  <h3 id="bienvenue"><strong>Bienvenue Pierre !</strong></h3>
 
   <p>To return to this home page at any time, click
     the bread icon in the upper left corner.</p>
