write README and add LICENSE

--- a/Pierre/wwwroot/css/styles.css
+++ b/Pierre/wwwroot/css/styles.css
@@ -176,5 +176,5 @@ hr {
 
 @font-face {
   font-family: bakery;
-  src: url("../fonts/frenchy/frenchy.ttf");
+  src: url("../fonts/frenchy.ttf");
 }
