--- a/Pierre/wwwroot/css/styles.css
+++ b/Pierre/wwwroot/css/styles.css
@@ -174,6 +174,10 @@ hr {
   font-size: 17px;
 }
 
+#bug {
+  color: red;
+}
+
 @font-face {
   font-family: bakery;
   src: url("../fonts/frenchy.ttf");
